--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -602,11 +602,11 @@ PilotOptionsInfo.option.mm_implants.displayableName=Multi-Modal Sensory Implant
 PilotOptionsInfo.option.mm_implants.description=Combination of Eye/Ear/Laser \nSee IO pg 79 for details.
 PilotOptionsInfo.option.enh_mm_implants.displayableName=Enhanced Multi-Modal Sensory Implants
 PilotOptionsInfo.option.enh_mm_implants.description=Enhanced Version of Eye/Ear/Laser \nSee IO pg 79 for details.
-PilotOptionsInfo.option.filtration_implants.displayableName=Filtration Implants
+PilotOptionsInfo.option.filtration_implants.displayableName=Filtration Implants (Not Implemented)
 PilotOptionsInfo.option.filtration_implants.description= Filtration Implants \nSee IO pg 79 for details.
-PilotOptionsInfo.option.gas_effuser_pheromone.displayableName=Gas Effuser (Pheromone)
+PilotOptionsInfo.option.gas_effuser_pheromone.displayableName=Gas Effuser (Pheromone) (Not Implemnented)
 PilotOptionsInfo.option.gas_effuser_pheromone.description=Gas Effuser (Pheromone) \nSee IO pg 79 for details.
-PilotOptionsInfo.option.gas_effuser_toxin.displayableName=Gas Effuser (Toxin)
+PilotOptionsInfo.option.gas_effuser_toxin.displayableName=Gas Effuser (Toxin) (Not Implemented)
 PilotOptionsInfo.option.gas_effuser_toxin.description=Gas Effuser (Toxin) \nSee IO pg 79 for details.
 PilotOptionsInfo.option.dermal_armor.displayableName=Myomer Implants (Dermal Armor)
 PilotOptionsInfo.option.dermal_armor.description=Units are more resistant to damage. \nSee IO pg 80 for details.
@@ -620,11 +620,29 @@ PilotOptionsInfo.option.vdni.displayableName=VDNI
 PilotOptionsInfo.option.vdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
 PilotOptionsInfo.option.bvdni.displayableName=Buffered VDNI
 PilotOptionsInfo.option.bvdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
-PilotOptionsInfo.option.pl_enhanced.displayableName=Prosthetic limbs, Enhanced (Not coded)
-PilotOptionsInfo.option.pl_enhanced.description=Additional Daamage to unit weapons.\n See IO 84 for details
+PilotOptionsInfo.option.pl_enhanced.displayableName=Prosthetic limbs, Enhanced (Not Implemented)
+PilotOptionsInfo.option.pl_enhanced.description=Additional Damage to unit weapons.\n See IO 84 for details
+PilotOptionsInfo.option.pl_ienhanced.displayableName=Prosthetic Limbs, Improved Enhanced (Not Implemented)
+PilotOptionsInfo.option.pl_ienhanced.description= Like the Enhanced Limbs but allows multiple enhancements.  \nSee IO pg 83
 PilotOptionsInfo.option.grappler.description=Was Grappler/Electromagnet - \nSee IO pg 84 for details
 PilotOptionsInfo.option.pl_masc.displayableName=Prosthetic leg MASC
 PilotOptionsInfo.option.pl_masc.description=Conventional Infantry units can go faster.
+PilotOptionsInfo.option.suicide_implants.displayableName=Explosive Suicide Implants (Not Implemented)
+PilotOptionsInfo.option.suicide_implants.description=Unit can self-destruct causing damage \nSee IO pg 83
+PilotOptionsInfo.option.proto_dni.displayableName=Prototype Direct Neural Interface (Not Implemented)
+PilotOptionsInfo.option.proto_dni.description= The Original Direct Neural Interface technology. Like VDNI \nSee IO pg 83
+PilotOptionsInfo.option.pl_extra_limbs.displayableName=Prosthetic Limbs, Extraneous (Enhanced) Limbs. (Not Implemented)
+PilotOptionsInfo.option.pl_extra_limbs.description=Adds more arms for guns. \nSee IO pg 84
+PilotOptionsInfo.option.pl_tail.displayableName=Prosthetic Tail, Enhanced (Not Implemented)
+PilotOptionsInfo.option.pl_tail.description=Adds additional damage to units in the same hex as the unit. \nSee IO pg 85
+PilotOptionsInfo.option.pl_glider.displayableName=Prosthetic Wings, Glider (Not Implemented)
+PilotOptionsInfo.option.pl_glider.description=Parafoil affect for equipped unit. \nSee IO pg 85
+PilotOptionsInfo.option.pl_flight.displayableName=Prosthetic Wings, Powered Flight (Not Implemented)
+PilotOptionsInfo.option.pl_flight.description=Unit equipment is considered to have VTOL movement. \nSee IO pg 85
+
+
+
+
 
 PartialRepairsInfo.group.part_repairs.displayableName=Partial Repairs
 PartialRepairsInfo.option.mech_reactor_3_crit.displayableName=3+ Critical Engine Hits
