Show omni equipment mounting status in MechView.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1374,6 +1374,8 @@ MechView.Industrial=\ Industrial
 MechView.Heavy\ Industrial=\ Heavy Industrial
 MechView.Commercial=\ Commercial
 MechView.WeaponDamage=\ weapon(s) damaged
+MechView.Pod=Pod
+MechView.Fixed=Fixed
 MineDensityDialog.title=Mine Density
 MineDensityDialog.labDensity=Density
 MineLayingDialog.title=Mine Selection
