Support for tagging troop space as fixed or pod-mounted.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1317,7 +1317,7 @@ MechSelectorDialog.title=Select Mech...
 MechSelectorDialog.BV=Show BV calculation
 MechView.ActiveFighters=Active Fighters: 
 MechView.Armor=Armor: 
-MechView.CarringCapacity=\nCarrying Capacity:\n
+MechView.CarryingCapacity=\nCarrying Capacity:\n
 MechView.Clan=\ (Clan)
 MechView.DesignInvalid=[Design Invalid]
 MechView.Endo\ Steel=\ (Endo-Steel)
