--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,8 @@
 VERSION HISTORY:
 ----------------
+v0.42.2-git
++ Issue #476: VTOL armor diagram changes color incorrectly?
+
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
 	BA SRM4(OS) and BA LBX
