--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,8 @@ v0.43.1-git
 + Issue #494 - Updated Princess Behaviors (Thanks pfarland and xStormforgex)
 + Issue #484 and fixes to image names.
 + Issue #490: Fixed princess documentation.
++ Feature: Princess will now respond with "You are not my boss." if a player attempts to issue a command to an enemy
+    Princess instance.
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
