--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -94,6 +94,8 @@ GameOptionsInfo.option.canon_only.displayableName=Canon Units Only
 GameOptionsInfo.option.canon_only.description=If checked,\nthe "add unit" dialog will only show official units.
 GameOptionsInfo.option.allow_advanced_units.displayableName=Allow advanced units
 GameOptionsInfo.option.allow_advanced_units.description=If checked,\nunits mounting advanced,\nexperimental or unofficial equipment may be selected from the unit selection dialog.\nUnchecked by default.
+GameOptionsInfo.option.era_based.displayableName=Variable tech level
+GameOptionsInfo.option.era_based.description=If checked,\nunit tech level will depend on the year the game is set in.
 GameOptionsInfo.option.allow_illegal_units.displayableName=Allow invalid unit designs
 GameOptionsInfo.option.allow_illegal_units.description=If checked,\nplayers may use units that do not conform to the official construction rules.\n Basically,\nthis allows players to cheat,\nso make sure you have a good reason to check it.
 GameOptionsInfo.option.allow_advanced_ammo.displayableName=Allow advanced ammunition types
