--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1319,6 +1319,11 @@ MechView.ActiveFighters=Active Fighters:
 MechView.Armor=Armor: 
 MechView.CarryingCapacity=\nCarrying Capacity:\n
 MechView.Clan=\ (Clan)
+MechView.BaseTechLevel=Base Tech Level:\ 
+MechView.Era=Era
+MechView.Level=Level
+MechView.Extinct=Extinct
+MechView.ISExtinctOnly=* Does not apply to ComStar or Clans
 MechView.DesignInvalid=[Design Invalid]
 MechView.Endo\ Steel=\ (Endo-Steel)
 MechView.Endo\ Steel\ Prototype=\ (Endo-Steel Prototype)
