Added tech rating/availabililty codes to MechView.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1323,6 +1323,7 @@ MechView.BaseTechLevel=Base Tech Level:\
 MechView.Era=Era
 MechView.Level=Level
 MechView.Extinct=Extinct
+MechView.TechRating=Tech Rating
 MechView.ISExtinctOnly=* Does not apply to ComStar or Clans
 MechView.DesignInvalid=[Design Invalid]
 MechView.Endo\ Steel=\ (Endo-Steel)
