--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.43.1-git
 + Issue #198: Long tom cannons cannot switch to indirect firing mode
 + Issue #456: Cannot cancel hotloading of LRMs during battle
 + Issue #457: Hot loaded LRMs not working properly
++ Issue #499: Map Editor Theme Broken
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
