--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.42.2-git
 + Issue #198: Long tom cannons cannot switch to indirect firing mode
 + Issue #456: Cannot cancel hotloading of LRMs during battle
 + Issue #499: Map Editor Theme Broken
++ Issue #487: Issues with startup.sh 
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
