--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -852,7 +852,9 @@
 7025=<data> (<data>)
 7030=Pilot :
 7035=Driver :
+7036=Crew :
 7040=Gunnery Skill :
+7041=Gunnery Skill : <data>
 7045=\ <data> [<data>/<data>]
 7050=\ <data> [<data>]
 7055=\ ( <data> hit(s) )
