--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.43.1-git
 + Issue #499: Map Editor Theme Broken
 + Issue #487: Issues with startup.sh 
 + Issue #464: Incorrect titles for ASF and BA in the end-of-battle text
++ Issue #421: Toughness Text In Pilot Tab Spacing Issue
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
