--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.43.1-git
 + Issue #464: Incorrect titles for ASF and BA in the end-of-battle text
 + Issue #421: Toughness Text In Pilot Tab Spacing Issue
 + Issue #442: Tooltip colors still not quite right for firing vectors
++ Issue #507: Image atlas map has cross-platform issues
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
