--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.42.2-git
 + Issue #421: Toughness Text In Pilot Tab Spacing Issue
 + Issue #442: Tooltip colors still not quite right for firing vectors
 + Issue #511: Fall height is wrong for falls when moving into a higher hex
++ Bug: ASF can use Silver Bullet Gauss Rifles/Ammo
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
