--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -32,6 +32,7 @@ v0.43.1-git
 + Bug: Cannot fire arm-mounted weapons while prone.
 + Bug: ASF can use Silver Bullet Gauss Rifles/Ammo
 + Bug: Attack sprites/arrows no longer shown for sensor returns
++ Issue #510: Reports related to geysers weren't marked public
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
