Updated Cooling System Flaws quirk to match current rules

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -519,6 +519,7 @@
 5018=Adding <data> heat from active vibroblade(s)...
 5019=Adding <data> heat from Charged Capacitor...
 5020=Adding <data> heat due to extreme temperatures...
+5021=Adding <data> heat due to flawed cooling system...
 5025=Subtracting <data> heat due to extreme temperatures...
 5026=Subtracting <data> heat due to combat computer...
 5027=Subtracting <data> heat due to RISC Emergency Coolant System...
@@ -1050,7 +1051,7 @@
 9702=avoids crash.
 #flawed cooling system related
 9800=<newline><data> [<data>] Checking Flawed Cooling due to <data>.  Rolls <data>.
-9805=\ --Adding 5 heat.
+9805=\ --Adding 5 heat per turn for the remainer of the scenario.
 # HarJel II/III related
 9850=<data> (<data>) repairs <data> armor in <data> due to HarJel II system.
 9851=<data> (<data>) repairs <data> armor in <data> due to HarJel III system.
