--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -42,6 +42,7 @@ v0.43.1-git
 + Bug: Fuel tank magnitude terrain type not removed from collapsed buildings
 + Issue #473: Vehicle threshold report erroneously added for VTOLs
 + Issue #430: Smoke artillery only affecting center hex
++ Issue #458: Map selection changes when loading generated map settings
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
