--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.42.2-git
 + Issue #473: Vehicle threshold report erroneously added for VTOLs
 + Issue #430: Smoke artillery only affecting center hex
 + Issue #458: Map selection changes when loading generated map settings
++ Issue #471: TacOps zip-lining didn't factor in elevation
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
