--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -44,6 +44,7 @@ v0.43.1-git
 + Issue #430: Smoke artillery only affecting center hex
 + Issue #458: Map selection changes when loading generated map settings
 + Issue #471: TacOps zip-lining didn't factor in elevation
++ Issue #454: Physical attacks and friendly units
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
