--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -46,6 +46,7 @@ v0.43.1-git
 + Issue #471: TacOps zip-lining didn't factor in elevation
 + Issue #454: Physical attacks and friendly units
 + Data: Unit fixes and new Sprites.
++ Data: Fixing some unit validation errors.
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
