--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,9 @@ v0.42.2-git
 + Issue #458: Map selection changes when loading generated map settings
 + Issue #471: TacOps zip-lining didn't factor in elevation
 + Issue #454: Physical attacks and friendly units
++ Bug: Potential NPE in TroopSpace.unload
++ Issue #513: Infantry killed by Inferno ammo not giving kill credit
+
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
