--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -47,6 +47,7 @@ v0.43.1-git
 + Issue #454: Physical attacks and friendly units
 + Data: Unit fixes and new Sprites.
 + Data: Fixing some unit validation errors.
++ Issue #513: Infantry killed by Inferno ammo not giving kill credit
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
