--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -48,6 +48,7 @@ v0.43.1-git
 + Data: Unit fixes and new Sprites.
 + Data: Fixing some unit validation errors.
 + Issue #513: Infantry killed by Inferno ammo not giving kill credit
++ PR #515: Show %BV remaining in round reports
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
