Condensed "As Bot" connect message

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -2546,7 +2546,7 @@ MegaMek.welcome.message=MegaMek is a complex application -- if you ever need any
 MegaMek.hostNewGame.label=Start a New Game...
 MegaMek.hostScenario.label=Start a Scenario...
 MegaMek.hostSavedGame.label=Start a Saved Game...
-MegaMek.ConnectAsBot.label=Connect as a Computer player...
+MegaMek.ConnectAsBot.label=Connect as Bot...
 MegaMek.MapEditor.label=Map Editor
 MegaMek.PlayerNameAlert.title=Host a Game
 MegaMek.SaveGameDialog.title=Select saved game...
