Fix #70: Engine explosions not igniting center hex

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,7 +23,7 @@ v0.42.2-git
 + Issue #454: Physical attacks and friendly units
 + Bug: Potential NPE in TroopSpace.unload
 + Issue #513: Infantry killed by Inferno ammo not giving kill credit
-
++ Issue #70: Engine explosions not igniting center hex
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
