--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -563,6 +563,7 @@
 5125=Fire at <data> is burning brightly.
 5130=Inferno fire at <data> is burning brightly.
 5135=Fire at <data> was started this round.
+5136=Fire at <data> was started due to an engine explosion!
 5140=Heavy woods at <data> burns down to Light Woods!
 5141=Ultra Heavy woods at <data> burns down to Heavy Woods!
 5142=Heavy jungle at <data> burns down to Light jungle!
