--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -51,6 +51,7 @@ v0.43.1-git
 + PR #515: Show %BV remaining in round reports
 + Issue #385: Freeze When Zooming Out With LargeTexture.tileset
 + Issue #70: Engine explosions not igniting center hex
++ Issue #348: Selecting lance move options does not disable individual init
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
