--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -52,6 +52,7 @@ v0.43.1-git
 + Issue #385: Freeze When Zooming Out With LargeTexture.tileset
 + Issue #70: Engine explosions not igniting center hex
 + Issue #348: Selecting lance move options does not disable individual init
++ Issue #225: Bad String in Round Report for Thunder LRMs
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
