Deploying doomed units now nags the user

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -912,6 +912,8 @@ DeploymentDisplay.buttonInferno=Inferno({0})
 DeploymentDisplay.buttonVibrabomb=Vibrabomb({0})
 DeploymentDisplay.buttonRemove=Remove
 DeploymentDisplay.cantDeployInto={0} can not deploy into {1}.
+DeploymentDisplay.ConfirmDoomed.title=Deploy doomed?
+DeploymentDisplay.ConfirmDoomed.message=Due to planetary conditions, deploying this unit will cause it to be destroyed. \nReason: {0}\nDo you wish to proceed?
 DeploymentDisplay.deployDock=Dock
 DeploymentDisplay.dropshipBuildingDeploy=Landed dropships cannot be deployed on top of buildings.
 DeploymentDisplay.elevationTooLow={0} can not deploy into {1} because elevation is too low.
