--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.42.2-git
 + Issue #70: Engine explosions not igniting center hex
 + Issue #348: Selecting lance move options does not disable individual init
 + Issue #225: Bad String in Round Report for Thunder LRMs
++ Deploying doomed units now nags the user (ie, infantry in a vacuum)
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
