--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -28,6 +28,7 @@ v0.42.2-git
 + Issue #225: Bad String in Round Report for Thunder LRMs
 + Deploying doomed units now nags the user (ie, infantry in a vacuum)
 + Issue #408: Offboard units not checked for planetary conditions (ie, vacuum)
++ Issue #394: No location exposure check on deployment
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
