--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -868,6 +868,6 @@ WeaponQuirksInfo.option.non_functional.description=No game effect.\nNot yet impl
 WeaponQuirksInfo.option.poor_cooling.displayableName=Poor Cooling Jacket
 WeaponQuirksInfo.option.poor_cooling.description=+1 to heat (SO pg 198)
 WeaponQuirksInfo.option.stable_weapon.displayableName=Stablized Weapon
-WeaponQuirksInfo.option.stable_weapon.description=Weapon is not as affected by moving at high speeds (BMM pg 86) \nNot yet implemented.
+WeaponQuirksInfo.option.stable_weapon.description=Weapon is not as affected by moving at high speeds (BMM pg 86) \nAttacks by unit while running have a -1 tohit modifier.
 WeaponQuirksInfo.option.static_feed.displayableName=Static Ammo Feed
 WeaponQuirksInfo.option.static_feed.description=No game effect.\nNot yet implemented. (RS NTNU 3145 pg 15)
