Implemented Barrel Fist quirk

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -675,6 +675,10 @@ QuirksInfo.option.atmo_flyer.displayableName=Atmospheric Flyer
 QuirksInfo.option.atmo_flyer.description=This unit is easy to handle in atmosphere. (SO pg 193)
 QuirksInfo.option.battle_computer.displayableName=Battle Computer
 QuirksInfo.option.battle_computer.description=+2 to initiative. (SO pg 193)
+QuirksInfo.option.barrel_fists_la.displayableName=Barrel Fists (LA)
+QuirksInfo.option.barrel_fists_la.description=An arm with this quirk does not apply the +1 modifier for a missing hand.\nMust be applied to one or both arms.
+QuirksInfo.option.barrel_fists_ra.displayableName=Barrel Fists (RA)
+QuirksInfo.option.barrel_fists_ra.description=An arm with this quirk does not apply the +1 modifier for a missing hand.\nMust be applied to one or both arms.
 QuirksInfo.option.battle_fists.displayableName=Battle Fists
 QuirksInfo.option.battle_fists.description=-1 to-hit when making punches with hands (RS NTNU 3145 pg 12)
 QuirksInfo.option.combat_computer.displayableName=Combat Computer
