--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -56,6 +56,7 @@ v0.43.1-git
 + Deploying doomed units now nags the user (ie, infantry in a vacuum)
 + Issue #408: Offboard units not checked for planetary conditions (ie, vacuum)
 + Issue #394: No location exposure check on deployment
++ Data: Turret Rats pt1 Thanks Bloodwolf. New Maps.
 
 v0.43.0 (2017-02-13 03:30 UTC)
 +Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
