--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.43.2-git
+
 v0.43.1 (2017-02-13 01:15 UTC)
 + Feature: Added checks for null crew when checking for MD enhancements
 + Feature: Merge pull request #486 from pheonixstorm/SPA-Update
