--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.43.2-git
 	fragile fuel tank
 + Issue #526: Further image atlas packaging bugs
 + Issue #526: Updating Unit Image files that have errors.
++ Issue #487: Carriage returns in startup.sh causing issues
 
 v0.43.1 (2017-03-31 01:15 UTC)
 + Feature: Added checks for null crew when checking for MD enhancements
