Fix #529: Movement Interruption w/ Dialog EndsTurn

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -30,6 +30,7 @@ v0.42.2-git
 + Issue #408: Offboard units not checked for planetary conditions (ie, vacuum)
 + Issue #394: No location exposure check on deployment
 + Issue #487: Carriage returns in startup.sh causing issues
++ Issue #529: Movement Interruption with Dialog Box Ends Turn
 
 v0.42.1 (2017-02-13 03:30 UTC)
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
