--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.42.3-git
+
 v0.42.2 (2017-05-1 01:00 UTC)
 + Issue #476: VTOL armor diagram changes color incorrectly?
 + Issue #198: Long tom cannons cannot switch to indirect firing mode
